--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -1,1 +1,19 @@
+name: Auto Label Issues
 
+on:
+  issues:
+    types: [opened, edited]
+
+jobs:
+  label:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Apply labels based on title/keywords
+        uses: actions-ecosystem/action-add-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: |
+            ${{ contains(github.event.issue.title, 'bug') && 'bug' || '' }}
+            ${{ contains(github.event.issue.title, 'learn') && 'learning' || '' }}
+            ${{ contains(github.event.issue.title, 'exp') && 'experiment' || '' }}
+            ${{ contains(github.event.issue.title, 'task') && 'task' || '' }}
