--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,1 +1,40 @@
 
+name: Lint Code
+
+on:
+  push:
+    paths:
+      - '**/*.py'
+      - '**/*.js'
+  pull_request:
+    paths:
+      - '**/*.py'
+      - '**/*.js'
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install Black
+        run: pip install black
+
+      - name: Run Black
+        run: black . --check
+
+      - name: Install Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Prettier
+        run: npm install --global prettier
+
+      - name: Run Prettier
+        run: prettier . --check
