Auto-Close Stale Issues (Keeps Repo Clean)

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,1 +1,15 @@
+name: Close stale issues
 
+on:
+  schedule:
+    - cron: '0 0 * * *'  # daily
+
+jobs:
+  stale:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/stale@v9
+        with:
+          days-before-stale: 30
+          days-before-close: 7
+          stale-issue-message: "This issue has gone stale. Please update if still relevant."
